# rust_robot

./: .gitignore  Cargo.toml  MUJOCO_LOG.TXT  README.md  a.ipynb  a.txt  build.rs  car.xml  gym_humanoid.xml  humanoid.xml  inverted_pendulum.xml  visualization.html
.cargo/: config.toml
data/curve/: sample1.json
src/: lib.rs  main.rs  pg_run.rs  ppo_run.rs  rnn_ppo_run.rs
src/burn_utils/: avoid_overflow.rs  mod.rs  rand.rs  sequence.rs  tensor.rs
src/burn_utils/distribution/: categorical.rs  mod.rs  normal.rs
src/mujoco/: data.rs  ffi.rs  mod.rs  model.rs  render.rs
src/mujoco/c_header/: mjdata.h  mjmodel.h  mjplugin.h  mjrender.h  mjspec.h  mjui.h  mjvisualize.h  mujoco.h
src/rl_algorithm/: memory.rs  mod.rs  model.rs  normal.rs  on_policy_runner.rs  utils.rs
src/rl_algorithm/base/: config.rs  memory.rs  mod.rs  model.rs  model_base_runner.rs  on_policy_runner.rs  rl_utils.rs
src/rl_algorithm/mbpo/: config.rs  mod.rs  model_base_agent.rs
src/rl_algorithm/policy_gradient/: config.rs  critic.rs  mod.rs  pg_agent.rs  policy.rs  policy_gradient_agent.rs
src/rl_algorithm/ppo/: config.rs  mod.rs  model.rs  ppo_agent.rs
src/rl_algorithm/preload_net/: actor_critic.rs  categorical_mlp_policy.rs  mlp_critic.rs  mlp_dynamic_net.rs  mlp_policy.rs  mod.rs  normal_mlp_policy.rs  rnn_policy.rs  utils.rs
src/rl_env/: config.rs  env.rs  env_sampler.rs  env_utils.rs  gym_humanoid_v4.rs  inverted_pendulum_v4.rs  mobile_arm.rs  mod.rs  nd_vec.rs
stanford_tidybot/: tidybot.xml
