[package]
name = "mujoco"
version = "0.1.0"
edition = "2021"

[dependencies]
glfw = "0.59.0"
image = "0.25.5"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
video-rs = { version = "0.10", features = ["ndarray"] }
burn = { version = "0.16.0", features = ["train", "ndarray", "tch"] }
rand_distr = "0.5.1"
rand = "0.9.0"
core_affinity = "0.8.3"
threadpool = "1.8.1"
tch = "0.15.0"
lazy_static = "1.5.0"
crossbeam-deque = "0.8"
num-traits = "0.2.19"
tensorboard-rs = "0.5.9"
chrono = "0.4.40"
